--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "aula_assistant",
+    "description": "a user-friendly media control system used in the Gymnasium Riedberg auditorium",
     "private": true,
     "version": "0.1.0",
     "type": "module",
@@ -11,13 +12,13 @@
         "format:fe": "prettier --write ."
     },
     "dependencies": {
-        "@radix-ui/react-context-menu": "^2.2.12",
-        "@radix-ui/react-dialog": "^1.1.11",
-        "@radix-ui/react-menubar": "^1.1.12",
-        "@radix-ui/react-slot": "^1.2.0",
-        "@tailwindcss/vite": "^4.1.5",
-        "@tauri-apps/api": "^2.5.0",
-        "@tauri-apps/plugin-opener": "^2.2.6",
+        "@radix-ui/react-context-menu": "^2.2.15",
+        "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-menubar": "^1.1.15",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@tailwindcss/vite": "^4.1.11",
+        "@tauri-apps/api": "^2.7.0",
+        "@tauri-apps/plugin-opener": "^2.4.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
@@ -25,20 +26,20 @@
         "next-themes": "^0.4.6",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "sonner": "^2.0.3",
-        "tailwind-merge": "^3.2.0",
-        "tailwindcss": "^4.1.5"
+        "sonner": "^2.0.6",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss": "^4.1.11"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^2.5.0",
-        "@types/node": "^22.15.3",
-        "@types/react": "^18.3.20",
+        "@tauri-apps/cli": "^2.7.1",
+        "@types/node": "^22.16.5",
+        "@types/react": "^18.3.23",
         "@types/react-dom": "^18.3.7",
-        "@vitejs/plugin-react": "^4.4.1",
-        "prettier": "^3.5.3",
-        "prettier-plugin-tailwindcss": "^0.6.11",
-        "tw-animate-css": "^1.2.9",
+        "@vitejs/plugin-react": "^4.7.0",
+        "prettier": "^3.6.2",
+        "prettier-plugin-tailwindcss": "^0.6.14",
+        "tw-animate-css": "^1.3.6",
         "typescript": "~5.6.3",
-        "vite": "^6.3.4"
+        "vite": "^6.3.5"
     }
 }
