--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,3 +23,5 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 clap = { version = "4.5.41", features = ["cargo"] }
+tauri-plugin-log = "2"
+log = "0.4.27"
