--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,5 @@ serde_json = "1"
 clap = { version = "4.5.41", features = ["cargo"] }
 tauri-plugin-log = "2"
 log = "0.4.27"
+serde_yaml = "0.9.34"
+directories = "6.0.0"
