--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@tailwindcss/vite": "^4.1.11",
         "@tauri-apps/api": "^2.7.0",
+        "@tauri-apps/plugin-dialog": "~2.3.2",
         "@tauri-apps/plugin-log": "~2.6.0",
         "@tauri-apps/plugin-opener": "^2.4.0",
+        "@tauri-apps/plugin-os": "~2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
