--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -6,9 +6,7 @@ publish = false
 description = "A user-friendly media control system used in the Gymnasium Riedberg auditorium."
 repository = "https://github.com/grb-technik/aula_assistant"
 readme = "https://github.com/grb-technik/aula_assistant/blob/master/README.md"
-authors = [
-    "Christian Fuchte <christian.fuchte@grb-online.net>"
-]
+authors = ["Christian Fuchte <christian.fuchte@grb-online.net>"]
 
 [lib]
 name = "aula_assistant_lib"
@@ -16,6 +14,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
+chrono = "0.4.41"
 
 [dependencies]
 tauri = { version = "2", features = [] }
@@ -26,3 +25,8 @@ clap = { version = "4.5.41", features = ["cargo"] }
 tauri-plugin-log = "2"
 log = "0.4.27"
 serde_yaml = "0.9.34"
+tauri-plugin-dialog = "2"
+tauri-plugin-os = "2"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-single-instance = "2"
