--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "tauri": "tauri",
-        "format:fe": "prettier --write ."
+        "format": "prettier --write ."
     },
     "dependencies": {
         "@radix-ui/react-context-menu": "^2.2.15",
@@ -20,7 +20,7 @@
         "@tauri-apps/plugin-dialog": "~2.3.2",
         "@tauri-apps/plugin-log": "~2.6.0",
         "@tauri-apps/plugin-opener": "^2.4.0",
-        "@tauri-apps/plugin-os": "~2",
+        "@tauri-apps/plugin-os": "~2.3.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
@@ -34,7 +34,7 @@
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2.7.1",
-        "@types/node": "^22.16.5",
+        "@types/node": "^22.17.0",
         "@types/react": "^18.3.23",
         "@types/react-dom": "^18.3.7",
         "@vitejs/plugin-react": "^4.7.0",
