--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,7 @@
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
-
+target
 node_modules
 dist
-dist-ssr
-*.local
-
-.vscode/*
-!.vscode/extensions.json
+.vscode
 .idea
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
