--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,11 +18,12 @@ tauri-build = { version = "2", features = [] }
 chrono = "0.4.41"
 
 [dependencies]
+artnet = { path = "../crates/artnet" }
+cli = { path = "../crates/cli" }
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-clap = { version = "4.5.41", features = ["cargo"] }
 tauri-plugin-log = "2"
 log = "0.4.27"
 serde_yaml = "0.9.34"
