free console if not needed

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,5 +30,13 @@ serde_yaml = "0.9.34"
 tauri-plugin-dialog = "2"
 tauri-plugin-os = "2"
 
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = "0.61.2", features = [
+    "Win32_Foundation",
+    "Win32_System_Console",
+    "Win32_System_Threading",
+    "Win32_UI_WindowsAndMessaging",
+] }
+
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
