--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/artnet","crates/cli","src-tauri"]
+members = ["crates/artnet","crates/cli", "crates/windows","src-tauri"]
 resolver = "3"
 
 [workspace.package]
