--- a/crates/ptmahdbt42/Cargo.toml
+++ b/crates/ptmahdbt42/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "artnet"
+name = "ptmahdbt42"
+description = "tiny implementation of all needed features of the PT-MA_HDBT42's RS232 passthrough protocol via network api"
 version = "0.1.0"
 repository.workspace = true
 edition.workspace = true
