--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [workspace]
-members = ["crates/artnet","crates/cli", "crates/ptmahdbt42", "crates/windows","src-tauri"]
+members = [
+    "crates/artnet",
+    "crates/cli",
+    "crates/ptmahdbt42",
+    "crates/windows",
+    "src-tauri",
+]
 resolver = "3"
 
 [workspace.package]
