--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "tauri": "tauri",
-        "format": "prettier --write .",
-        "lint": "pnpm eslint --ignore-pattern target --ignore-pattern dist --ignore-pattern node_modules --ext .ts,.tsx,.js,.jsx ."
+        "format": "prettier --write ."
     },
     "dependencies": {
         "@radix-ui/react-context-menu": "^2.2.16",
@@ -34,20 +33,15 @@
         "tailwindcss": "^4.1.14"
     },
     "devDependencies": {
-        "@eslint/js": "^9.38.0",
         "@tauri-apps/cli": "^2.8.4",
         "@types/node": "^22.18.11",
         "@types/react": "^18.3.26",
         "@types/react-dom": "^18.3.7",
         "@vitejs/plugin-react": "^4.7.0",
-        "eslint": "^9.38.0",
-        "eslint-plugin-react": "^7.37.5",
-        "globals": "^16.4.0",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "tw-animate-css": "^1.4.0",
         "typescript": "~5.6.3",
-        "typescript-eslint": "^8.46.2",
         "vite": "^6.4.0"
     }
 }
