--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -9,5 +9,6 @@
     "tabWidth": 4,
     "endOfLine": "crlf",
     "useTabs": false,
-    "printWidth": 120
+    "printWidth": 120,
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
