--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,14 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
+		"date-fns": "^4.1.0",
 		"express": "^5.1.0",
 		"osc-min": "^2.1.2",
 		"zod": "^4.1.12"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.5",
 		"@types/node": "^24.10.0",
 		"typescript": "^5.9.3"
