--- a/server/package.json
+++ b/server/package.json
@@ -1,26 +1,27 @@
 {
-	"name": "aula-assistant-server",
-	"version": "0.1.0",
-	"private": true,
-	"description": "a user-friendly media control system used in the Gymnasium Riedberg auditorium",
-	"type": "module",
-	"main": "dist/index.js",
-	"scripts": {
-		"start": "node --env-file-if-exists=.env dist/index.js",
-		"build": "tsc",
-		"format": "prettier --write ."
-	},
-	"dependencies": {
-		"cors": "^2.8.5",
-		"date-fns": "^4.1.0",
-		"express": "^5.1.0",
-		"osc-min": "^2.1.2",
-		"zod": "^4.1.12"
-	},
-	"devDependencies": {
-		"@types/cors": "^2.8.19",
-		"@types/express": "^5.0.5",
-		"@types/node": "^24.10.0",
-		"typescript": "^5.9.3"
-	}
+    "name": "aula-assistant-server",
+    "version": "0.1.0",
+    "private": true,
+    "description": "a user-friendly media control system used in the Gymnasium Riedberg auditorium",
+    "type": "module",
+    "main": "dist/index.js",
+    "scripts": {
+        "start": "node dist/index.js",
+        "build": "tsc",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "date-fns": "^4.1.0",
+        "express": "^5.1.0",
+        "osc-min": "^2.1.2",
+        "zod": "^4.1.12"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.5",
+        "@types/node": "^24.10.0",
+        "prettier": "^3.7.2",
+        "typescript": "^5.9.3"
+    }
 }
